# Probability-Tutorials

./: CLAUDE.md  README.md  generate_covers.py  plan.md  pyproject.toml
tier1_foundations/: 01_what_is_probability.ipynb  02_types_of_probability.ipynb  03_rules_of_probability.ipynb  04_conditional_probability.ipynb  05_bayes_theorem.ipynb  06_random_variables.ipynb  07_expected_value_and_variance.ipynb  08_distributions_part1.ipynb  09_distributions_part2.ipynb  10_normal_distribution.ipynb  11_sampling_and_clt.ipynb  12_descriptive_statistics.ipynb  generate_nb.py
tier2_data_scientists/: 13_distributions_in_ml.ipynb  14_maximum_likelihood_estimation.ipynb  15_bias_variance_tradeoff.ipynb  16_bayesian_vs_frequentist.ipynb  17_hypothesis_testing_model_evaluation.ipynb  18_bootstrap_jackknife.ipynb  19_correlation_covariance_feature_selection.ipynb  20_information_theory.ipynb  21_experiment_design_power_analysis.ipynb  22_causal_inference.ipynb  generate_nb.py
tier2_developers/: 13_probability_in_code.ipynb  14_monte_carlo_methods.ipynb  15_ab_testing.ipynb  16_bayesian_updating.ipynb  17_log_probabilities.ipynb  18_probability_in_apis.ipynb  19_randomized_algorithms.ipynb  20_probabilistic_data_structures.ipynb  21_statistical_testing_feature_flags.ipynb  22_debugging_probabilistic_systems.ipynb  generate_nb.py
tier2_engineers/: 13_reliability_failure_probability.ipynb  14_poisson_processes.ipynb  15_queuing_theory.ipynb  16_statistical_process_control.ipynb  17_signal_noise_snr_filtering.ipynb  18_failure_mode_analysis.ipynb  19_monte_carlo_engineering.ipynb  (+4 more)
(+20 files in other folders)
