[project]
name = "probability"
version = "0.1.0"
description = "Probability & Statistics Tutorial — YouTube Channel by Phiphat Chomchit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.2",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "ipywidgets>=8.1",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "plotly>=5.20",
    "networkx>=3.2",
]
